--- a/SportsApp/LeagueDetails/View/TeamsSection/TeamCell.xib
+++ b/SportsApp/LeagueDetails/View/TeamsSection/TeamCell.xib
@@ -15,70 +15,79 @@
             <rect key="frame" x="0.0" y="0.0" width="351" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NHb-wu-ObA">
-                    <rect key="frame" x="55" y="-24" width="40" height="40"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="40" id="22s-6z-WRh"/>
-                        <constraint firstAttribute="height" constant="40" id="3h5-2i-6Cd"/>
-                    </constraints>
-                </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j0o-bj-1zS">
                     <rect key="frame" x="15.999999999999998" y="20" width="7.6666666666666661" height="20"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Arsnal" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zjy-if-9ep">
-                    <rect key="frame" x="120" y="20" width="85" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Arsnal" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zjy-if-9ep">
+                    <rect key="frame" x="116.66666666666669" y="20" width="88" height="21"/>
                     <color key="tintColor" red="0.0" green="0.22352941179999999" blue="0.85490196080000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="85" id="FMI-Yx-xfF"/>
+                        <constraint firstAttribute="width" constant="88" id="FMI-Yx-xfF"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="11" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wN2-pb-0gP">
-                    <rect key="frame" x="228" y="20" width="15" height="21"/>
+                    <rect key="frame" x="224.66666666666666" y="20" width="21" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="21" id="fqM-N4-Hlj"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="8" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MoD-eE-80M">
-                    <rect key="frame" x="274" y="20" width="11" height="21"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="88" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MoD-eE-80M">
+                    <rect key="frame" x="273.66666666666669" y="20" width="21" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="21" id="OBM-TX-Wa7"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" text="26" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9TX-aI-grg">
-                    <rect key="frame" x="319" y="20" width="21" height="21"/>
+                    <rect key="frame" x="322.66666666666669" y="20" width="21" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="21" id="8yw-7b-9Iv"/>
+                    </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NHb-wu-ObA">
+                    <rect key="frame" x="51.666666666666657" y="10" width="40" height="40"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="40" id="22s-6z-WRh"/>
+                        <constraint firstAttribute="height" constant="40" id="3h5-2i-6Cd"/>
+                    </constraints>
+                </imageView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="S1t-wd-ScK"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <accessibility key="accessibilityConfiguration" identifier="TeamCell"/>
             <constraints>
-                <constraint firstItem="NHb-wu-ObA" firstAttribute="top" secondItem="5rh-KZ-iyq" secondAttribute="top" constant="10" id="12b-Cf-LB8"/>
-                <constraint firstItem="S1t-wd-ScK" firstAttribute="bottom" secondItem="NHb-wu-ObA" secondAttribute="bottom" constant="10" id="4Sl-hu-Nce"/>
                 <constraint firstItem="MoD-eE-80M" firstAttribute="top" secondItem="5rh-KZ-iyq" secondAttribute="top" constant="20" id="4m6-TU-lND"/>
                 <constraint firstItem="wN2-pb-0gP" firstAttribute="top" secondItem="5rh-KZ-iyq" secondAttribute="top" constant="20" id="76R-HN-Juf"/>
                 <constraint firstItem="j0o-bj-1zS" firstAttribute="leading" secondItem="5rh-KZ-iyq" secondAttribute="leading" constant="16" id="8IK-eQ-WTE"/>
+                <constraint firstAttribute="bottom" secondItem="NHb-wu-ObA" secondAttribute="bottom" constant="10" id="B03-Xi-SMS"/>
                 <constraint firstItem="zjy-if-9ep" firstAttribute="top" secondItem="5rh-KZ-iyq" secondAttribute="top" constant="20" id="Eos-lx-Tkr"/>
                 <constraint firstAttribute="bottom" secondItem="wN2-pb-0gP" secondAttribute="bottom" constant="19" id="FFB-9b-6rk"/>
                 <constraint firstItem="zjy-if-9ep" firstAttribute="leading" secondItem="NHb-wu-ObA" secondAttribute="trailing" constant="25" id="H2M-fS-cCg"/>
-                <constraint firstItem="9TX-aI-grg" firstAttribute="leading" secondItem="MoD-eE-80M" secondAttribute="trailing" constant="34" id="HSL-Mg-DLy"/>
+                <constraint firstItem="9TX-aI-grg" firstAttribute="leading" secondItem="MoD-eE-80M" secondAttribute="trailing" constant="28" id="HSL-Mg-DLy"/>
                 <constraint firstItem="9TX-aI-grg" firstAttribute="top" secondItem="5rh-KZ-iyq" secondAttribute="top" constant="20" id="K7Z-hQ-Hma"/>
                 <constraint firstAttribute="bottom" secondItem="j0o-bj-1zS" secondAttribute="bottom" constant="20" id="L22-kc-8h8"/>
-                <constraint firstItem="MoD-eE-80M" firstAttribute="leading" secondItem="wN2-pb-0gP" secondAttribute="trailing" constant="31" id="PEC-Ad-HZo"/>
-                <constraint firstItem="NHb-wu-ObA" firstAttribute="leading" secondItem="j0o-bj-1zS" secondAttribute="trailing" constant="31.333333333333332" id="XlT-RR-N5d"/>
+                <constraint firstItem="MoD-eE-80M" firstAttribute="leading" secondItem="wN2-pb-0gP" secondAttribute="trailing" constant="28" id="PEC-Ad-HZo"/>
+                <constraint firstItem="NHb-wu-ObA" firstAttribute="leading" secondItem="j0o-bj-1zS" secondAttribute="trailing" constant="28" id="XlT-RR-N5d"/>
                 <constraint firstAttribute="bottom" secondItem="zjy-if-9ep" secondAttribute="bottom" constant="19" id="aFH-g0-QI7"/>
                 <constraint firstItem="j0o-bj-1zS" firstAttribute="top" secondItem="5rh-KZ-iyq" secondAttribute="top" constant="20" id="ahh-el-Ilh"/>
                 <constraint firstAttribute="bottom" secondItem="MoD-eE-80M" secondAttribute="bottom" constant="19" id="bUC-cD-2Cs"/>
                 <constraint firstAttribute="bottom" secondItem="9TX-aI-grg" secondAttribute="bottom" constant="19" id="f42-xu-ba7"/>
-                <constraint firstItem="wN2-pb-0gP" firstAttribute="leading" secondItem="zjy-if-9ep" secondAttribute="trailing" constant="23" id="fRa-YN-j4H"/>
+                <constraint firstItem="wN2-pb-0gP" firstAttribute="leading" secondItem="zjy-if-9ep" secondAttribute="trailing" constant="20" id="fRa-YN-j4H"/>
+                <constraint firstItem="NHb-wu-ObA" firstAttribute="top" secondItem="5rh-KZ-iyq" secondAttribute="top" constant="10" id="gbn-kd-1bo"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
