--- a/SportsApp/LeagueDetails/View/TeamsSection/TeamsHeader.xib
+++ b/SportsApp/LeagueDetails/View/TeamsSection/TeamsHeader.xib
@@ -11,38 +11,38 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LeagueDetailsCollectionViewController" customModule="SportsApp" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="wbF-iM-TXP">
+        <view contentMode="scaleToFill" id="wbF-iM-TXP" customClass="TeamsHeader" customModule="SportsApp" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="351" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="POS" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zBp-Wp-0Re">
-                    <rect key="frame" x="16" y="20" width="34" height="20"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="POS" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zBp-Wp-0Re">
+                    <rect key="frame" x="8" y="20" width="35.333333333333336" height="20"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="P" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j8R-iq-kwg">
-                    <rect key="frame" x="216.33333333333334" y="20" width="11" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <rect key="frame" x="232.66666666666666" y="20" width="11" height="21"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="W" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hwV-tU-cRG">
-                    <rect key="frame" x="257.33333333333331" y="20" width="17" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <rect key="frame" x="273.66666666666669" y="20" width="17" height="21"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="252" text="Pts" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="P10-uL-cGB">
-                    <rect key="frame" x="304.33333333333331" y="20" width="25" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <rect key="frame" x="320.66666666666669" y="20" width="27.333333333333314" height="21"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Team" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GEt-4K-P5W">
-                    <rect key="frame" x="73" y="20" width="41.333333333333343" height="21"/>
+                    <rect key="frame" x="133.33333333333334" y="20" width="44.333333333333343" height="21"/>
                     <color key="tintColor" red="0.0" green="0.22352941179999999" blue="0.85490196080000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -55,20 +55,20 @@
                 <constraint firstItem="hwV-tU-cRG" firstAttribute="leading" secondItem="j8R-iq-kwg" secondAttribute="trailing" constant="29.999999999999972" id="9L4-D6-AI6"/>
                 <constraint firstItem="P10-uL-cGB" firstAttribute="leading" secondItem="hwV-tU-cRG" secondAttribute="trailing" constant="30" id="HLf-sd-QSQ"/>
                 <constraint firstItem="P10-uL-cGB" firstAttribute="top" secondItem="wbF-iM-TXP" secondAttribute="top" constant="20" id="Ma4-hi-VDX"/>
-                <constraint firstItem="zBp-Wp-0Re" firstAttribute="leading" secondItem="QXv-Ho-IAV" secondAttribute="leading" constant="16" id="OC3-5i-GoI"/>
+                <constraint firstItem="zBp-Wp-0Re" firstAttribute="leading" secondItem="QXv-Ho-IAV" secondAttribute="leading" constant="8" id="OC3-5i-GoI"/>
                 <constraint firstItem="hwV-tU-cRG" firstAttribute="top" secondItem="wbF-iM-TXP" secondAttribute="top" constant="20" id="PHi-gH-Sdv"/>
                 <constraint firstItem="GEt-4K-P5W" firstAttribute="top" secondItem="wbF-iM-TXP" secondAttribute="top" constant="20" id="QHI-JZ-69C"/>
-                <constraint firstItem="j8R-iq-kwg" firstAttribute="leading" secondItem="GEt-4K-P5W" secondAttribute="trailing" constant="102.00000000000003" id="Yl6-eN-Ize"/>
-                <constraint firstItem="GEt-4K-P5W" firstAttribute="leading" secondItem="zBp-Wp-0Re" secondAttribute="trailing" constant="23" id="fkR-k1-LTD"/>
+                <constraint firstItem="j8R-iq-kwg" firstAttribute="leading" secondItem="GEt-4K-P5W" secondAttribute="trailing" constant="55" id="Yl6-eN-Ize"/>
+                <constraint firstItem="GEt-4K-P5W" firstAttribute="leading" secondItem="zBp-Wp-0Re" secondAttribute="trailing" constant="90" id="fkR-k1-LTD"/>
                 <constraint firstItem="zBp-Wp-0Re" firstAttribute="top" secondItem="wbF-iM-TXP" secondAttribute="top" constant="20" id="p5k-MB-dcx"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="index" destination="zBp-Wp-0Re" id="SeY-EB-9NQ"/>
-                <outlet property="teamName" destination="GEt-4K-P5W" id="weJ-HM-niE"/>
-                <outlet property="teamPoints" destination="j8R-iq-kwg" id="EV2-ac-nzD"/>
-                <outlet property="teamPts" destination="P10-uL-cGB" id="OEt-OW-c8N"/>
-                <outlet property="teamWins" destination="hwV-tU-cRG" id="e5Q-nH-X9v"/>
+                <outlet property="PointsLable" destination="j8R-iq-kwg" id="5E7-W4-BMR"/>
+                <outlet property="PosLable" destination="zBp-Wp-0Re" id="RGe-Qt-dOf"/>
+                <outlet property="PtsLable" destination="P10-uL-cGB" id="7mq-eS-Nwb"/>
+                <outlet property="TeamLable" destination="GEt-4K-P5W" id="YBw-0B-N06"/>
+                <outlet property="WinsLable" destination="hwV-tU-cRG" id="uaY-7c-fjY"/>
             </connections>
             <point key="canvasLocation" x="-83.206106870229007" y="-531.69014084507046"/>
         </view>
